changed 'justify-content' on the section so image and text are no longer overlapping

--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -29,15 +29,15 @@ section {
     height: 1000px;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .picture-section {
     width:25%
     
 }
 .filler1{
-    width: 20%;
+    width: 10%;
 }
 .filler2{
-    width: 20%;
+    width: 10%;
 }
